--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
       margin: 0;
       padding: 0;
       background: black;
-      color: white;
-      font-family: "Inter", sans-serif;
       overflow-x: hidden;
+      overflow-y: auto;
+      font-family: Inter, sans-serif;
+      color: white;
     }
+
     header {
       position: fixed;
       top: 0;
@@ -24,76 +26,109 @@
       text-align: center;
       z-index: 1000;
     }
+
     nav a {
       color: white;
       text-decoration: none;
       font-weight: 600;
       margin: 0 20px;
       font-size: 18px;
-      transition: color 0.2s ease;
     }
+
     nav a:hover {
-      color: #ddd;
       text-decoration: underline;
+      color: #dcdcdc;
     }
+
     main {
       margin-top: 120px;
-      padding: 0 20px 60px;
-      text-align: center;
-      max-width: 1000px;
+      padding: 20px;
+      max-width: 1100px;
       margin-left: auto;
       margin-right: auto;
+      text-align: center;
     }
+
     .banner-container {
       position: relative;
       text-align: center;
+      color: white;
       margin-bottom: 80px;
     }
+
     .banner-container img {
       width: 100%;
       height: auto;
+      display: block;
       border-radius: 0;
     }
+
     .banner-text {
       position: absolute;
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
-      background: rgba(0, 0, 0, 0.5);
-      padding: 30px 50px;
-      border-radius: 12px;
+      text-align: center;
+      background: rgba(0, 0, 0, 0.4);
+      padding: 20px 40px;
+      border-radius: 10px;
     }
+
     .banner-text h1 {
-      font-family: 'Roboto Mono', monospace;
       font-size: 60px;
+      font-family: 'Roboto Mono', monospace;
       margin: 0;
     }
+
     .banner-text p {
       font-size: 22px;
       margin-top: 10px;
     }
+
+    .headshot {
+      width: 240px;
+      border-radius: 50%;
+      margin: 20px auto;
+      display: block;
+      border: 4px solid white;
+    }
+
     section {
       margin-bottom: 80px;
     }
-    img.headshot {
-      width: 220px;
-      border-radius: 50%;
-      display: block;
-      margin: 0 auto 20px;
-      border: 4px solid white;
-    }
+
     h2 {
       font-size: 32px;
       border-bottom: 2px solid white;
       display: inline-block;
-      padding-bottom: 5px;
+      padding-bottom: 6px;
       margin-bottom: 20px;
     }
+
     p {
       font-size: 18px;
       line-height: 1.6;
       max-width: 800px;
       margin: 0 auto 20px;
+    }
+
+    footer {
+      background: #0E0202;
+      color: white;
+      text-align: center;
+      padding: 25px 0;
+      border-top: 1px solid #080300;
+      width: 100%;
+      position: relative;
+      bottom: 0;
+      left: 0;
+      font-size: 16px;
+      margin-top: 60px;
+    }
+
+    footer p {
+      margin: 0;
+      color: #bfbfbf;
     }
   </style>
 </head>
@@ -124,11 +159,15 @@
 
     <section>
       <h2>Skills</h2>
-      <p><strong>Programming Languages:</strong> Java, HTML, CSS, Assembly, C++, Python, JavaScript, SQL</p>
-      <p><strong>Frameworks and Tools:</strong> Git, Eclipse, Visual Studio, IntelliJ, Easy C, VS Code, LibGDX, JavaFX, React, Node.js, SQL Workspace, Soloist.ai</p>
+      <p><strong>Programming Languages:</strong> Java, HTML, Assembly, C++, Python, JavaScript, SQL</p>
+      <p><strong>Frameworks and Tools:</strong> Git, Eclipse, Visual Studio, IntelliJ, Easy C, VS Code, LibGDX, SQL Workspace, Soloist.ai</p>
       <p><strong>Design / UI:</strong> Adobe Audition, Figma, GIMP</p>
       <p><strong>Certifications:</strong> Microsoft’s Python Programming Fundamentals (Coursera)</p>
     </section>
   </main>
+
+  <footer>
+    <p>© 2025 Madison Ammirati | Portfolio</p>
+  </footer>
 </body>
 </html>
