--- a/index.html
+++ b/index.html
@@ -5,14 +5,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Madison Ammirati Portfolio</title>
   <style>
+    /* Footer layout fix */
     html, body {
+      height: 100%;
+      display: flex;
+      flex-direction: column;
       margin: 0;
       padding: 0;
       background: black;
-      overflow-x: hidden;
-      overflow-y: auto;
-      font-family: Inter, sans-serif;
       color: white;
+      font-family: "Inter", sans-serif;
+    }
+
+    main {
+      flex: 1;
     }
 
     header {
@@ -59,8 +65,6 @@
     .banner-container img {
       width: 100%;
       height: auto;
-      display: block;
-      border-radius: 0;
     }
 
     .banner-text {
@@ -93,10 +97,6 @@
       border: 4px solid white;
     }
 
-    section {
-      margin-bottom: 80px;
-    }
-
     h2 {
       font-size: 32px;
       border-bottom: 2px solid white;
@@ -118,12 +118,8 @@
       text-align: center;
       padding: 25px 0;
       border-top: 1px solid #080300;
-      width: 100%;
-      position: relative;
-      bottom: 0;
-      left: 0;
       font-size: 16px;
-      margin-top: 60px;
+      margin-top: 40px;
     }
 
     footer p {
