--- a/projects.html
+++ b/projects.html
@@ -6,12 +6,17 @@
   <title>Projects - Madison Ammirati</title>
   <style>
     html, body {
+      height: 100%;
+      display: flex;
+      flex-direction: column;
       margin: 0;
-      padding: 0;
       background: #02002F;
       color: white;
       font-family: "Inter", sans-serif;
-      overflow-x: hidden;
+    }
+
+    main {
+      flex: 1;
     }
 
     header {
@@ -48,58 +53,18 @@
       text-align: center;
     }
 
-    h1 {
-      font-size: 40px;
-      border-bottom: 2px solid white;
-      display: inline-block;
-      padding-bottom: 8px;
-      margin-bottom: 50px;
-    }
-
     .card {
       background: linear-gradient(180deg, #0E0202 0%, #07017E 100%);
       border-radius: 12px;
       padding: 30px;
       margin-bottom: 50px;
       box-shadow: 0 0 15px rgba(255,255,255,0.1);
-      transition: transform 0.2s ease, box-shadow 0.2s ease;
-    }
-
-    .card:hover {
-      transform: scale(1.02);
-      box-shadow: 0 0 25px rgba(255,255,255,0.2);
     }
 
     .card img {
       display: block;
-      margin: 30px auto 10px;
+      margin: 30px auto;
       border-radius: 8px;
-      box-shadow: 0 0 12px rgba(255,255,255,0.1);
-    }
-
-    .card h3 {
-      font-size: 26px;
-      margin-bottom: 10px;
-    }
-
-    .card p {
-      font-size: 18px;
-      line-height: 1.6;
-      max-width: 900px;
-      margin: 0 auto 10px;
-    }
-
-    .card img.epa {
-      width: 250px;
-    }
-
-    .card img.reef {
-      width: 700px;
-      max-width: 90%;
-    }
-
-    .card img.sjsu {
-      width: 300px;
     }
 
     footer {
@@ -108,12 +73,7 @@
       text-align: center;
       padding: 25px 0;
       border-top: 1px solid #080300;
-      width: 100%;
-      position: relative;
-      bottom: 0;
-      left: 0;
       font-size: 16px;
-      margin-top: 60px;
     }
 
     footer p {
@@ -139,21 +99,21 @@
       <h3>EPA ESA Web App</h3>
       <p><strong>User Research Lead</strong></p>
       <p>Led user research for a 3-person team during a summer internship to design a centralized web platform that helps farmers identify pesticide options based on region and regulations. Created an interactive Figma prototype, iterated through user feedback, and supported development with React Native and JavaScript to bridge design and implementation.</p>
-      <img src="images/EPA.png" alt="EPA ESA Web App" class="epa">
+      <img src="images/EPA.png" alt="EPA ESA Web App Screenshot" width="250">
     </div>
 
     <div class="card">
       <h3>Reef Guardian Game</h3>
       <p><strong>System Architect</strong></p>
       <p>Worked on a 5-person team to design and develop a Java side-scroller game. Served as system architect by creating UML diagrams and flowcharts, and contributed to gameplay logic, debugging, and optimization, blending technical work with narrative-driven design.</p>
-      <img src="images/reefgame.png" alt="Reef Guardian Game" class="reef">
+      <img src="images/reefgame.png" alt="Reef Guardian Game Screenshot" width="650">
     </div>
 
     <div class="card">
       <h3>Engineering Labs</h3>
       <p><strong>Developer</strong></p>
       <p>Developed advanced Java applications through 12+ labs, gaining hands-on experience with object-oriented programming, data structures, debugging, and core concepts like inheritance, polymorphism, and encapsulation.</p>
-      <img src="images/SJSU.png" alt="SJSU Engineering Labs" class="sjsu">
+      <img src="images/SJSU.png" alt="SJSU Engineering Labs Screenshot" width="300">
     </div>
   </main>
 
